--- a/src/styles/Calendar/Calendar.css
+++ b/src/styles/Calendar/Calendar.css
@@ -194,12 +194,54 @@
     {
         display: flex;
         flex-direction: column;
-        height: 80vh;
+        height: 100vh;
         width: 93%;
         margin-left: 30px;
         background-color: rgba(249, 249, 250, 0.879);
         /* background-color: red; */
-        margin-top: 50px;
+        margin-top: 100px;
+        border-radius: 10px;
+    }
+}
+@media screen and (max-width:382px) {
+    .calendar_container
+    {
+        display: flex;
+        flex-direction: column;
+        height: 105vh;
+        width: 90%;
+        margin-left: 30px;
+        background-color: rgba(249, 249, 250, 0.879);
+        /* background-color: red; */
+        margin-top: 380px;
+        border-radius: 10px;
+    }
+}
+@media screen and (max-width:350px) {
+    .calendar_container
+    {
+        display: flex;
+        flex-direction: column;
+        height: 105vh;
+        width: 90%;
+        margin-left: 20px;
+        background-color: rgba(249, 249, 250, 0.879);
+        /* background-color: red; */
+        margin-top: 380px;
+        border-radius: 10px;
+    }
+}
+@media screen and (max-width:331px) {
+    .calendar_container
+    {
+        display: flex;
+        flex-direction: column;
+        height: 105vh;
+        width: 90%;
+        margin-left: 7px;
+        background-color: rgba(249, 249, 250, 0.879);
+        /* background-color: red; */
+        margin-top: 380px;
         border-radius: 10px;
     }
 }
