--- a/src/styles/Header/Searchbar.css
+++ b/src/styles/Header/Searchbar.css
@@ -176,6 +176,19 @@
     margin-left: -30px;
   }
 }
+@media screen and (max-width: 382px) 
+{
+  .searchbar_container {
+    width: 50%;
+    margin-left: 20px;
+    margin-top: 50px;
+  }
+  .remainder_container {
+    /* width: 25px; */
+    margin-top: 50px;
+    margin-left: -5px;
+  }
+}
 .search_icon
 {
     margin-Left: 15px;
